<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#121212">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_icon"
            android:textSize="60sp"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CineVerse"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Book Movies Anytime, Anywhere"
            android:textColor="#BBBBBB"
            android:textSize="18sp"
            android:layout_marginBottom="40dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/email"
            android:padding="15dp"
            android:background="@drawable/edittext_bg"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/password"
            android:padding="15dp"
            android:background="@drawable/edittext_bg"
            android:inputType="textPassword"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/button_red"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>